Fix tag margin on mobile

--- a/themes/vuesnippets/assets/scss/_common.scss
+++ b/themes/vuesnippets/assets/scss/_common.scss
@@ -24,7 +24,7 @@ body {
   padding: $navbarHeight+2rem 0 0;
 }
 
-ol, ul, p, blockquote {
+ol, ul, p, blockquote, a {
   line-height: 1.6;
 }
 
